--- a/style/style.css
+++ b/style/style.css
@@ -123,7 +123,7 @@ a.btn-seemore:hover {
 	left: 0;
 	z-index: -1;
 	/* background */
-	background: url(../img/bg.png) no-repeat center center;
+	background-image: url(../img/bg.png) no-repeat center center;
 	background-size: cover;
 	/* other */
 	transform: scale(1.1);
